# system-monitor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: collector.cpp  collector.h  config.cpp  config.h  main.cpp  renderer.cpp  renderer.h  system_data.h  utils.cpp  utils.h
tests/: test_parser.cpp
